@@ -67,8 +67,7 @@ be_visitor_operation_ch::visit_operation (be_operation *node)
   // STEP 2: generate the operation name. The port prefix should
   // be an empty string except for operations from attributes
   // defined in a porttype.
-  *os << be_nl
-      << this->ctx_->port_prefix ().c_str () << node->local_name ();
+  *os << be_nl << node->local_name ();
 
   // STEP 3: generate the argument list with the appropriate mapping. For these
   // we grab a visitor that generates the parameter listing.
